# Typoglycemia

./: .gitignore  Build.bat  Build.sh  CMakeLists.txt  LICENSE  README.md
Miscellaneous/: Manpage.1
Source/: Main.c  Main.cpp
